<resources>
    <string name="app_name">Secure SMS</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="create_account">No account yet ? Create one</string>
    <string name="register">Create account</string>
    <string name="already_member">Already a member? Login</string>
    <string name="name">Name</string>

    <string name="pref_user">preference_user</string>
    <string name="refresh_token">refresh_token</string>
    <string name="access_token">access_token</string>
    <string name="expires_in">expires_in</string>
    <string name="pref_shared_txt">txt_shared</string>


    <string name="ack_ping_send">En attente d\'un PONG</string>
    <string name="ack_pong_send">PONG</string>
    <string name="ack_ping_receive">expires_in</string>
    <string name="ack_pong_receive">expiresin</string>


    <string name="notification_title">Secure SMS</string>
    <string name="notification_message">Vous avez un nouveau message</string>
    <string name="ticker_text">Ticker text</string>

    <string name="chat_secure">Chat secure</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_create_contact">CreateContactActivity</string>
    <string name="confirm_password">Confirm password</string>
    <string name="profile_img">Image de profile</string>
    <string name="img">G</string>
    <string name="state">Show resume message...</string>
    <string name="state_secure">State secure</string>
    <string name="message">Show message...</string>
    <string name="time">Date et heure</string>
    <string name="add_user">Add user</string>
    <string name="send">SEND</string>
    <string name="write_message">Saisir le message</string>
    <string name="secure_sms">SECURE SMS</string>
    <string name="send_pong">SEND PONG</string>
    <string name="envoyer_pong">Envoyer PONG</string>
    <string name="wait_pong">ATTENT PONG</string>
    <string name="logo">Image Logo</string>
    <string name="add_contact">Add Contact</string>
</resources>
