<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="20dp"
        android:gravity="center"
        android:weightSum="2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <fr.mbds.securesms.utils.CustomTextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".5"
            android:gravity="center"
            android:textAlignment="center"
            android:textSize="40sp"
            android:text="@string/app_name"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1."
            android:orientation="vertical">

            <EditText
                android:id="@+id/register_et_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                android:hint="@string/username"
                android:inputType="textEmailAddress"
                tools:targetApi="o"
                tools:ignore="Autofill" />

            <EditText
                android:id="@+id/register_et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                tools:targetApi="o"
                tools:ignore="Autofill" />

            <EditText
                android:id="@+id/register_et_password2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                tools:targetApi="o"
                tools:ignore="Autofill" />

            <Button
                android:id="@+id/register_btn_create"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                android:text="@string/register"
                tools:targetApi="o" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".5"
            android:orientation="vertical">

            <TextView
                android:id="@+id/register_tv_go_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15sp"
                android:gravity="center_horizontal"
                android:text="@string/already_member"
                android:clickable="true"
                android:focusable="true" />

        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>